<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:background="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/d120dp"
        android:layout_height="@dimen/d120dp"
        android:background="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d5dp"
        android:text="Travel Sharering"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_size_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d40dp"
        android:layout_marginTop="@dimen/d40dp"
        android:layout_marginEnd="@dimen/d40dp"
        android:background="@drawable/bg_et_login"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="@dimen/d14dp"
        android:hint="@string/input_username"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/d20dp"
        android:paddingTop="@dimen/d10dp"
        android:paddingEnd="@dimen/d10dp"
        android:paddingBottom="@dimen/d10dp"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorGray"
        android:textSize="@dimen/text_size_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d40dp"
        android:layout_marginTop="@dimen/d15dp"
        android:layout_marginEnd="@dimen/d40dp"
        android:background="@drawable/bg_et_login"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="@dimen/d15dp"
        android:hint="@string/input_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/d20dp"
        android:paddingTop="@dimen/d10dp"
        android:paddingEnd="@dimen/d10dp"
        android:paddingBottom="@dimen/d10dp"
        android:textColor="@color/textColorWhite"
        android:textColorHint="@color/textColorGray"
        android:textSize="@dimen/text_size_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d40dp"
        android:layout_marginTop="@dimen/d30dp"
        android:layout_marginEnd="@dimen/d40dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/message_login"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_size_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="MissingConstraints" />


    <TextView
        android:gravity="center"
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d40dp"
        android:layout_marginTop="@dimen/d10dp"
        android:layout_marginEnd="@dimen/d40dp"
        android:paddingTop="@dimen/d10dp"
        android:paddingStart="@dimen/d30dp"
        android:paddingEnd="@dimen/d30dp"
        android:layout_marginBottom="@dimen/d10dp"
        android:text="@string/message_register_underline"
        android:textColor="@color/textColorWhite"
        android:textSize="@dimen/text_size_14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>